# video-breakdown

./: .env.example  .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  install.sh  preflight.sh  pyproject.toml
skill/: SKILL.md
skill/tools/: cli_usage.md
skill/workflow/: phase1_download.md  phase2_decompose.md  phase3_analyze.md  phase4_fingerprint.md  phase5_prompt.md
src/director/: __init__.py  cli.py  config.py
src/director/aesthetics/: __init__.py  forbidden.py  library.py  prompt_builder.py
src/director/fingerprint/: statistics.py  style.py
src/director/input/: decoder.py  downloader.py
src/director/perception/: audio.py  base.py  camera.py  music_structure.py  narration.py  pose.py  scene.py  sound_spotting.py  text_filter.py
src/director/prompt/: claude_vision.py  keyframe_selector.py  prompt_formatter.py
src/director/structure/: schema.py  shot_assembler.py  timeline.py
src/director/utils/: cost_tracker.py  device.py  memory.py  video.py
