[project]
name = "video-breakdown"
version = "0.1.0"
description = "Turn any reference video into structured data — shot decomposition, camera tracking, color fingerprint, music structure, AI prompt generation."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Proprietary" }
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "rich>=13.0",
    "ffmpeg-python>=0.2.0",
    "scenedetect[opencv]>=0.6",
    "onnxruntime>=1.17",
    "opencv-python>=4.8",
    "rtmlib>=0.0.12",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.11",
    "pillow>=10.0",
    "anthropic>=0.80",
    "torch>=2.1",
    "torchvision>=0.16",
    "psutil>=5.9",
    "tqdm>=4.65",
    "httpx>=0.27",
    "yt-dlp>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
video-breakdown = "director.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/director"]
